--- a/robotni/react/package.json
+++ b/robotni/react/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "robotni",
-  "version": "1.0.0",
-  "description": "CS 121 (FA 2019) project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -d --watch",
-    "start": "node ./server/index.js",
-    "build": "webpack -p",
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "hello-react",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.17.2",
-    "bootstrap": "^4.3.1",
-    "css-loader": "^3.2.0",
-    "express": "^4.15.3",
-    "react": "^15.4.1",
-    "react-bootstrap-15": "^0.29.0",
-    "react-dom": "^15.6.1",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "style-loader": "^1.0.0",
-    "webpack": "^3.4.1"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
