--- a/robotni/react/package.json
+++ b/robotni/react/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "material-ui": "^0.20.2",
+    "package.json": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
