--- a/robotni/react/package.json
+++ b/robotni/react/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "hello-react",
+  "name": "robotni",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "material-ui": "^0.20.2",
     "package.json": "^2.0.1",
