--- a/robotni/react/package.json
+++ b/robotni/react/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "material-ui": "^0.20.2",
+    "mongodb": "^3.3.3",
     "package.json": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
