Working API calls to Trefle. Not integrated into the frontend yet.

--- a/robotni/react/backend/.env
+++ b/robotni/react/backend/.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://mkunz:yTKJUGHE17!@cluster0-759rc.mongodb.net/test?retryWrites=true&w=majority
+TR_TOKEN=ZCtuc2hVcERNNnNkZ0xaSEpBM2x1UT09
