--- a/robotni/react/package.json
+++ b/robotni/react/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
-    "axios": "^0.19.0",
+    "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "material-ui": "^0.20.2",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
