added my MongoDB URI to environment. We will need to merge our DBs eventually

--- a/robotni/react/backend/.env
+++ b/robotni/react/backend/.env
@@ -1,3 +1,4 @@
-ATLAS_URI=mongodb+srv://mkunz:yTKJUGHE17!@cluster0-759rc.mongodb.net/test?retryWrites=true&w=majority
+MAX_ATLAS_URI=mongodb+srv://mkunz:yTKJUGHE17!@cluster0-759rc.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://kemery:sunnypool@robotni-free-jvqvi.mongodb.net/test?retryWrites=true&w=majority
 TR_TOKEN=ZCtuc2hVcERNNnNkZ0xaSEpBM2x1UT09
 WEATHER_KEY=af87c6936fbd22e1474a0292e5054717
