--- a/robotni/react/package.json
+++ b/robotni/react/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "sha256": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
